--- a/deduplication/deduplication.ipynb
+++ b/deduplication/deduplication.ipynb
@@ -23,18 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import recordlinkage as rcl\n",
-    "import jellyfish"
+    "import recordlinkage as rcl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -240,7 +239,7 @@
        "[533 rows x 7 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +442,7 @@
        "[533 rows x 7 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -537,7 +536,7 @@
        "2  805-498-4049           mexican    536  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -720,7 +719,7 @@
        "[83 rows x 4 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -886,7 +885,7 @@
        "[65 rows x 4 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,17 +898,430 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([218, 221, 222, 223, 224, 226, 231, 232, 234, 237, 239, 241, 242,\n",
+       "            244, 245, 246, 248, 249, 250, 251, 253, 255, 256, 257, 259, 262,\n",
+       "            263, 264, 266, 268, 270, 271, 272, 273, 275, 277, 281, 283, 285,\n",
+       "            292, 293, 296, 298, 301, 302, 303, 304, 305, 310, 311, 312, 313,\n",
+       "            314, 315, 316, 317, 318, 319, 320, 321, 322, 324, 326, 327, 329],\n",
+       "           dtype='int64')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# lấy index của df_2 (position 1)\n",
-    "df_2_index_with_dup = matches.index.get_level_values(1) # df of B which is mixed up (duplicated B, B that has A-outer)\n",
+    "df_2_index_with_dup = matches.index.get_level_values(1) # get only the index of B from the matches\n",
+    "df_2_index_with_dup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>addr</th>\n",
+       "      <th>city</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>type</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>218</td>\n",
+       "      <td>` arnie morton \\ 's of chicago '</td>\n",
+       "      <td>' 435 s. la cienega blvd. '</td>\n",
+       "      <td>` los angeles '</td>\n",
+       "      <td>310-246-1501</td>\n",
+       "      <td>steakhouses</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>221</td>\n",
+       "      <td>` cafe bizou '</td>\n",
+       "      <td>' 14016 ventura blvd. '</td>\n",
+       "      <td>` sherman oaks '</td>\n",
+       "      <td>818-788-3536</td>\n",
+       "      <td>` french bistro '</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>222</td>\n",
+       "      <td>campanile</td>\n",
+       "      <td>' 624 s. la brea ave. '</td>\n",
+       "      <td>` los angeles '</td>\n",
+       "      <td>213-938-1447</td>\n",
+       "      <td>californian</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>223</td>\n",
+       "      <td>` chinois on main '</td>\n",
+       "      <td>' 2709 main st. '</td>\n",
+       "      <td>` santa monica '</td>\n",
+       "      <td>310-392-9025</td>\n",
+       "      <td>` pacific new wave '</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>224</td>\n",
+       "      <td>citrus</td>\n",
+       "      <td>' 6703 melrose ave. '</td>\n",
+       "      <td>` los angeles '</td>\n",
+       "      <td>213-857-0034</td>\n",
+       "      <td>californian</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>322</th>\n",
+       "      <td>322</td>\n",
+       "      <td>` la folie '</td>\n",
+       "      <td>' 2316 polk st. '</td>\n",
+       "      <td>` san francisco '</td>\n",
+       "      <td>415-776-5577</td>\n",
+       "      <td>` french ( new ) '</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>324</th>\n",
+       "      <td>324</td>\n",
+       "      <td>` masa \\ 's '</td>\n",
+       "      <td>' 648 bush st. '</td>\n",
+       "      <td>` san francisco '</td>\n",
+       "      <td>415-989-7154</td>\n",
+       "      <td>` french ( new ) '</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>326</th>\n",
+       "      <td>326</td>\n",
+       "      <td>` plumpjack cafe '</td>\n",
+       "      <td>' 3127 fillmore st. '</td>\n",
+       "      <td>` san francisco '</td>\n",
+       "      <td>415-563-4755</td>\n",
+       "      <td>` american ( new ) '</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327</th>\n",
+       "      <td>327</td>\n",
+       "      <td>postrio</td>\n",
+       "      <td>' 545 post st. '</td>\n",
+       "      <td>` san francisco '</td>\n",
+       "      <td>415-776-7825</td>\n",
+       "      <td>californian</td>\n",
+       "      <td>109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>329</td>\n",
+       "      <td>` rose pistola '</td>\n",
+       "      <td>' 532 columbus ave. '</td>\n",
+       "      <td>` san francisco '</td>\n",
+       "      <td>415-399-0499</td>\n",
+       "      <td>italian</td>\n",
+       "      <td>111</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>65 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                              name                         addr  \\\n",
+       "218  218  ` arnie morton \\ 's of chicago '  ' 435 s. la cienega blvd. '   \n",
+       "221  221                    ` cafe bizou '      ' 14016 ventura blvd. '   \n",
+       "222  222                         campanile      ' 624 s. la brea ave. '   \n",
+       "223  223               ` chinois on main '            ' 2709 main st. '   \n",
+       "224  224                            citrus        ' 6703 melrose ave. '   \n",
+       "..   ...                               ...                          ...   \n",
+       "322  322                      ` la folie '            ' 2316 polk st. '   \n",
+       "324  324                     ` masa \\ 's '             ' 648 bush st. '   \n",
+       "326  326                ` plumpjack cafe '        ' 3127 fillmore st. '   \n",
+       "327  327                           postrio             ' 545 post st. '   \n",
+       "329  329                  ` rose pistola '        ' 532 columbus ave. '   \n",
+       "\n",
+       "                  city         phone                  type  class  \n",
+       "218    ` los angeles '  310-246-1501           steakhouses      0  \n",
+       "221   ` sherman oaks '  818-788-3536     ` french bistro '      3  \n",
+       "222    ` los angeles '  213-938-1447           californian      4  \n",
+       "223   ` santa monica '  310-392-9025  ` pacific new wave '      5  \n",
+       "224    ` los angeles '  213-857-0034           californian      6  \n",
+       "..                 ...           ...                   ...    ...  \n",
+       "322  ` san francisco '  415-776-5577    ` french ( new ) '    104  \n",
+       "324  ` san francisco '  415-989-7154    ` french ( new ) '    106  \n",
+       "326  ` san francisco '  415-563-4755  ` american ( new ) '    108  \n",
+       "327  ` san francisco '  415-776-7825           californian    109  \n",
+       "329  ` san francisco '  415-399-0499               italian    111  \n",
+       "\n",
+       "[65 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
     "# loại duplicate (left-inner-join hóa)\n",
-    "df_2_duplicate = df_2[df_2.index.isin(df_2_index_with_dup)] # df contains index that is duplicated w/ df_1\n",
-    "\n",
-    "df_2_no_dup = df_2[~df_2.index.isin(df_2_index_with_dup)] # clean df with only index of df_2"
+    "df_2_duplicate = df_2[df_2.index.isin(df_2_index_with_dup)] \n",
+    "# extract các rows từ df_2 contains index that is duplicated w/ df_1\n",
+    "df_2_duplicate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>addr</th>\n",
+       "      <th>city</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>type</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>` apple pan the '</td>\n",
+       "      <td>' 10801 w. pico blvd. '</td>\n",
+       "      <td>` west la '</td>\n",
+       "      <td>310-475-3585</td>\n",
+       "      <td>american</td>\n",
+       "      <td>534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>` asahi ramen '</td>\n",
+       "      <td>' 2027 sawtelle blvd. '</td>\n",
+       "      <td>` west la '</td>\n",
+       "      <td>310-479-2231</td>\n",
+       "      <td>` noodle shops '</td>\n",
+       "      <td>535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>` baja fresh '</td>\n",
+       "      <td>' 3345 kimber dr. '</td>\n",
+       "      <td>` westlake village '</td>\n",
+       "      <td>805-498-4049</td>\n",
+       "      <td>mexican</td>\n",
+       "      <td>536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>` belvedere the '</td>\n",
+       "      <td>' 9882 little santa monica blvd. '</td>\n",
+       "      <td>` beverly hills '</td>\n",
+       "      <td>310-788-2306</td>\n",
+       "      <td>` pacific new wave '</td>\n",
+       "      <td>537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>` benita \\ 's frites '</td>\n",
+       "      <td>' 1433 third st. promenade '</td>\n",
+       "      <td>` santa monica '</td>\n",
+       "      <td>310-458-2889</td>\n",
+       "      <td>` fast food '</td>\n",
+       "      <td>538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>309</th>\n",
+       "      <td>309</td>\n",
+       "      <td>` ritz-carlton restaurant '</td>\n",
+       "      <td>' 181 peachtree st. '</td>\n",
+       "      <td>atlanta</td>\n",
+       "      <td>404-659-0400</td>\n",
+       "      <td>` french ( classic ) '</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>323</th>\n",
+       "      <td>323</td>\n",
+       "      <td>` lulu restaurant-bis-cafe '</td>\n",
+       "      <td>' 816 folsom st. '</td>\n",
+       "      <td>` san francisco '</td>\n",
+       "      <td>415-495-5775</td>\n",
+       "      <td>mediterranean</td>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>325</td>\n",
+       "      <td>mifune</td>\n",
+       "      <td>' 1737 post st. '</td>\n",
+       "      <td>` san francisco '</td>\n",
+       "      <td>415-922-0337</td>\n",
+       "      <td>japanese</td>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328</th>\n",
+       "      <td>328</td>\n",
+       "      <td>` ritz-carlton dining room ( san francisco ) '</td>\n",
+       "      <td>' 600 stockton st. '</td>\n",
+       "      <td>` san francisco '</td>\n",
+       "      <td>415-296-7465</td>\n",
+       "      <td>` french ( new ) '</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330</th>\n",
+       "      <td>330</td>\n",
+       "      <td>` ritz-carlton cafe ( atlanta ) '</td>\n",
+       "      <td>' 181 peachtree st. '</td>\n",
+       "      <td>atlanta</td>\n",
+       "      <td>404-659-0400</td>\n",
+       "      <td>` american ( new ) '</td>\n",
+       "      <td>711</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>266 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                                            name  \\\n",
+       "0      0                               ` apple pan the '   \n",
+       "1      1                                 ` asahi ramen '   \n",
+       "2      2                                  ` baja fresh '   \n",
+       "3      3                               ` belvedere the '   \n",
+       "4      4                          ` benita \\ 's frites '   \n",
+       "..   ...                                             ...   \n",
+       "309  309                     ` ritz-carlton restaurant '   \n",
+       "323  323                    ` lulu restaurant-bis-cafe '   \n",
+       "325  325                                          mifune   \n",
+       "328  328  ` ritz-carlton dining room ( san francisco ) '   \n",
+       "330  330               ` ritz-carlton cafe ( atlanta ) '   \n",
+       "\n",
+       "                                   addr                  city         phone  \\\n",
+       "0               ' 10801 w. pico blvd. '           ` west la '  310-475-3585   \n",
+       "1               ' 2027 sawtelle blvd. '           ` west la '  310-479-2231   \n",
+       "2                   ' 3345 kimber dr. '  ` westlake village '  805-498-4049   \n",
+       "3    ' 9882 little santa monica blvd. '     ` beverly hills '  310-788-2306   \n",
+       "4          ' 1433 third st. promenade '      ` santa monica '  310-458-2889   \n",
+       "..                                  ...                   ...           ...   \n",
+       "309               ' 181 peachtree st. '               atlanta  404-659-0400   \n",
+       "323                  ' 816 folsom st. '     ` san francisco '  415-495-5775   \n",
+       "325                   ' 1737 post st. '     ` san francisco '  415-922-0337   \n",
+       "328                ' 600 stockton st. '     ` san francisco '  415-296-7465   \n",
+       "330               ' 181 peachtree st. '               atlanta  404-659-0400   \n",
+       "\n",
+       "                       type  class  \n",
+       "0                  american    534  \n",
+       "1          ` noodle shops '    535  \n",
+       "2                   mexican    536  \n",
+       "3      ` pacific new wave '    537  \n",
+       "4             ` fast food '    538  \n",
+       "..                      ...    ...  \n",
+       "309  ` french ( classic ) '     91  \n",
+       "323           mediterranean    105  \n",
+       "325                japanese    107  \n",
+       "328      ` french ( new ) '    110  \n",
+       "330    ` american ( new ) '    711  \n",
+       "\n",
+       "[266 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2_no_dup = df_2[~df_2.index.isin(df_2_index_with_dup)] \n",
+    "# extract các rows từ df_2 contains index that NOT duplicated w/ df_1\n",
+    "df_2_no_dup"
    ]
   },
   {
